# login-api

./: db.sqlite3  pyproject.toml
accounts/: apps.py  forms.py  models.py  tests.py  views.py
accounts/migrations/: 0001_initial.py  0002_customuser_gender.py
config/: settings.py
static/: style.css
templates/: base.html
templates/registration/: login.html
